--- a/style.css
+++ b/style.css
@@ -13,23 +13,26 @@
     background-size:cover;
     background-position: center center;
     background-repeat: no-repeat;
+    max-width: 1440px;
 }
 .container1{
-  height: 800px;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 
 }
 .img-bg{
-    margin:auto;
     display: flex;
     margin-bottom: 50px;
     padding:70px;
+    width: 40%;
 }
 @media  (max-width:768px){
     .img-bg img{
         display:block;
-        padding-top:50px;
-        margin-bottom:50px;
+    
     }
     .hero h2{
         font-size: 28px;
@@ -43,24 +46,27 @@
     margin: auto;
 }
 .hero{
-  width:95%;
-  margin:0 auto;
+  width:60%;
   text-align: center;
-  padding: 10px;  
+  padding: 10px;
+  display: block;  
 }
 .hero h2{
     font-size: 32px;
     line-height: 1.6;
     font-weight: 700;
     color: #514949;
+    padding: 10px 20px;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 .hero p {
-    font-size: 22px;
+    font-size: 16px;
     font-weight: 300;
     line-height: 1.6;
     color: #514949;
+    padding: 10px 20px;
+    margin-bottom: 30px;
     text-align: center;
 }
 
@@ -68,36 +74,41 @@ a {
     color: #E7332B;
     text-decoration: none;
 }
-
 a:hover{
     text-decoration: none;
     color: #eb5850;
     cursor: pointer;
 }
-
+.btn-hero{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    gap: 20px;
+    padding-left: 150px;
+    margin-top: 80px;
+    margin-bottom: 200px;
+}
 .btn2-hero{
-    margin-top: 40px;
+    width: 100%;
     padding: 11px 28px;
     border: 1px solid #E7332B;
     background-color: #E7332B;
-    color: #fff;
-    margin-right: 24px;
-    margin-bottom: 20px;   
+    color: #fff;   
 }
-
 .btn2-hero:hover {
     background-color: #fff;
     color: #E7332B;
 }
 
 .btn3-hero{
-    padding: 11px 28px;
+    width: 100%;
+    padding:  11px 28px;
+    font-size: 14px;
     border: 1px solid #E7332B;
     background-color: #fff;
     color: #E7332B;
-    margin-right: 24px;
 }
-
 .btn3-hero:hover {
     background-color: #E7332B;
     color: #fff;
@@ -105,10 +116,13 @@ a:hover{
 .container2 {
     background-color: #fff;
     overflow: hidden;
+    max-width: 1440px;
+    width: 100%;
 }
 
 .header-class {
-    padding-top: 0;
+    width: 95%;
+    display: block;
     text-align: center;
 }
 .header-class h3{
@@ -126,43 +140,64 @@ a:hover{
     margin-top: 8px;
     margin-bottom: 64px;
 }
-
 .header-class2{
-    margin: 0 auto;
+    width: 90%;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+}
+.row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    width: 90%;
+    padding: 10px;
     text-align: center;
 }
 
 .col1,.col2,.col3 {
-    width: 100%;
-    background-color: #FFFAFA;
-    padding: 61px 47px 82px 36px;
+    width: 30%;
+    background-color: #fffafa;
+    padding: 20px;
     text-align: center;
+    margin-left: 20px;
 }
-
-.card1 {
+.content img,.card2 img,.card3-div img{
+    align-items: flex-start ;
+    margin: 5px;
+}
+/*.card1,.card3 {
     position: relative;
     z-index: -1;
-}
-
+}*/
 .image-card{
     width: 100%;
-    position: absolute;
+    position:absolute;
     left: -120px;
     top: -75px;
-    z-index: 1;
+    z-index: 2;
 }
- .image-card2{
+ /*.image-card2{
     position: absolute;
     right: 300px;
     top: -40px;
     z-index: 2;
+}*/
+.card3-image{
+    width: 100%;
+    position: absolute;
+    right: -120px;
+    top: -75px;
+    z-index: 1;
 }
-
-.col1,.col2,.col3 img {
+.col1,
+.col2,
+.col3{
     margin-bottom: 48px;
 }
-
-.col1,.col2,.col3 p {
+.content p,.card2 p,.card3-div p {
     padding-top: 80px;
     font-size: 14px;
     text-align: left;
@@ -171,8 +206,7 @@ a:hover{
     color: #514949;
     opacity: 0.9;
 }
-
-.col1,.col2,.col3 h3 a {
+.card2 h3 a,.content h3 a,.card3-div h3 a {
     font-size: 16px;
     line-height: 24px;
     color: #E7332B;
@@ -180,35 +214,84 @@ a:hover{
 }
 .footer {
     margin-top: 215px;
+    max-width: 1440px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-
 .footer-class1 {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     text-align: center;
-    margin-bottom: 56px;
+    margin:auto;
     padding: 20px;
+    width: 90%;
 }
-
-.footer h3 {
+.footer-img{
+    width: 10%;
+    align-self: flex-start;
+}
+.footer-class2{
+    display: block;
+    align-items: center;
+    justify-content: center;
+    width: 10%;
+    margin: 10px;
+}
+.footer-class2 h3,.footer-class3 {
     font-size: 16px;
     font-weight: bold;
-    line-height: 24px;
+    line-height: 1.6;
     color: #514949;
 }
-
-.quick-links {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-/*.quick-links a {
+.footer-class2 a{
     text-decoration: none;
+    color: #E7332B;
+}
+
+.footer-class2 a p,
+.footer-class3 a p,.footer-class3 p{
+    text-align: center;
     font-size: 14px;
-    line-height: 20px;
-    color: #514949;
-    opacity: 0.9;
-}*/
+    font-weight: normal;
+    line-height: 1.6;
+}
+.footer-class3{
+    width: 20%;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+}
+.footer-class4{
+    width: 50%;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+}
+.footer-class4 h3{
+    margin-top: 10px;
+    text-align: left;
+    font-size: 14px;
+    font-weight: weight;
+    line-height: 1.6;
+    color: gray;
+}
+.contact-icons{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 30%;
+}
+.contact-icons a{
+    text-decoration: none;
+}
+.contact-icons a img{
+    padding: 10px;
+    gap: 10px;
+}
+
+
 
